[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AntebeotAPICli"
version = "0.0.1"
authors = [
  { name="Antebeot", email="startyourday60@gmail.com" },
]
description = "A things for use antebeot REST API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wipedlifepotato/AntebeotCli_py"
"Bug Tracker" = "https://github.com/wipedlifepotato/AntebeotCli_py/issues"
